--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,63 @@
+body {
+  background-color: #bab2fe;
+  font-family: sans-serif;
+}
+
 h1 {
   text-align: center;
+  font-family: sans-serif;
+  font-size: 36px;
+}
+
+h2 {
+  margin: 0 0 5px;
+  font-size: 28px;
+}
+
+select {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  border-radius: 4px;
+  font-size: 18px;
+}
+
+.container {
+  max-width: 600px;
+  margin: 60px auto;
+  background: #bab2fe;
+  padding: 30px;
+  border: 5px solid black;
+  border-radius: 15px;
+}
+
+.city {
+  display: flex;
+  margin: 20px 0;
+  justify-content: space-between;
+  padding: 30px 0;
+  border-bottom: 3px solid black;
+}
+
+.city:last-child {
+  border: none;
+}
+
+.date {
+  opacity: 0.7;
+}
+.time {
+  font-size: 48px;
+  font-weight: bold;
+}
+
+.time small {
+  font-size: 18px;
+  vertical-align: middle;
+  line-height: 36px;
 }
 
 footer {
   text-align: center;
+  font-size: 14px;
 }
