--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,16 @@
 body {
   background-color: #bab2fe;
-  font-family: sans-serif;
+  font-family: "Manrope", sans-serif;
 }
 
 h1 {
   text-align: center;
-  font-family: sans-serif;
-  font-size: 36px;
+  font-size: 50px;
 }
 
 h2 {
   margin: 0 0 5px;
-  font-size: 28px;
+  font-size: 44px;
 }
 
 select {
@@ -20,6 +19,7 @@ select {
   padding: 10px;
   border-radius: 4px;
   font-size: 18px;
+  font-family: "Manrope", sans-serif;
 }
 
 .container {
@@ -29,6 +29,7 @@ select {
   padding: 30px;
   border: 5px solid black;
   border-radius: 15px;
+  font-family: "Manrope", sans-serif;
 }
 
 .city {
@@ -52,7 +53,7 @@ select {
 }
 
 .time small {
-  font-size: 18px;
+  font-size: 24px;
   vertical-align: middle;
   line-height: 36px;
 }
